k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: multgame
spec:
  rules:
    - host: multgame.localtest.me
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api-server
                port:
                  number: 8081
          - path: /ws
            pathType: Prefix
            backend:
              service:
                name: ws-router
                port:
                  number: 8082
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-client
                port:
                  number: 80
